# fastapi-starterpack

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  justfile  pyproject.toml  tailwind.config.js  tasks.py
.github/workflows/: pr_code_check.yaml
_tasks/: alembic.py  db_postgres.py  generic.py  tailwind.py
alembic/: env.py
alembic/versions/: README.md
app/: main.py
app/core/: __init__.py  config.py  database.py  handler.py  lifespan.py  logger.py  middleware.py  templates.py
app/core/auth/: backend.py  exeptions.py  models.py  security.py
app/core/config/: __init__.py  exceptions.py  logger.py  secret.py  settings.py
app/core/database/: __init__.py  engine.py  health.py  repository.py  session.py
app/core/gateway/: error_response.py  handler.py  middleware.py
app/core/lifecycle/: __init__.py  lifespan.py
app/core/logging/: __init__.py  logger.py
app/core/rendering/: templates.py
app/core/templates/: __init__.py  templating.py
app/core/typedefs/: datatypes.py
app/core/utils/: __init__.py  config_utils.py  enums.py  exceptions.py  log_routes.py  logger_utils.py  misc_utils.py  response_utils.py  versioning.py
app/domain/permission/: model.py  schema.py
app/domain/post/: crud.py  enums.py  model.py  schema.py
app/domain/user/: crud.py  exception.py  model.py  schema.py
app/models/: __init__.py  _links.py  category.py  permission.py  post.py  user.py
app/models/demo/: product.py
app/repositories/: post.py  user.py
app/routes/: __init__.py  examples.py  home.py
app/routes/api/auth/: user.py
app/routes/api/blog/: blog.py
app/routes/api/v1/: product.py  user.py
app/routes/auth/: user.py
app/routes/blog/: blog.py  posts.py
app/routes/demo/: __init__.py
app/routes/pages/: blog.py  home.py
app/routes/post/: posts.py
app/routes/todo/: examples.py  token.py
app/schemas/: post.py  user.py
app/services/admin/: __init__.py  crypt.py  dashboard.py  provider.py  views.py
app/services/admin_portal/: provider.py
app/services/auth/: backend.py
app/static/css/: input.css  styles.css
app/static/js/: main.js
app/templates/: base.html
app/templates/admin/: dashboard.html
app/templates/blog/: blog.html  single_blog.html
app/templates/core/: base.html  error.html  footer.html  home.html  loading.html  meta.html  nav.html
app/templates/pages/: home.html
scripts/alembic/: alembic_up.py
scripts/misc/: generate_req.py  list.py
scripts/postgres/: _helpers.py  db_create.py  db_remove.py  db_start.py
scripts/setup/: _helpers.py  create_superuser.py  populate_posts.py
scripts/tailwind/: _helpers.py  tw_install.py  tw_watch.py
tasks_def/: __init__.py  alembic.py  db_postgres.py  generic.py  tailwind.py
tests/: .env.template_tests  conftest.py
tests/repositories/: test_post_repository.py
(+10 files in other folders)
